--- a/foo_httpcontrol/src/foo_httpcontrol_preferences.rc
+++ b/foo_httpcontrol/src/foo_httpcontrol_preferences.rc
@@ -29,7 +29,7 @@ FONT 8, "MS Shell Dlg", 400, 0, 1
     EDITTEXT        IDC_CONTROL_PASSWORD, 220, 99, 73, 13, WS_DISABLED | ES_AUTOHSCROLL
     EDITTEXT        IDC_CONTROL_PATH, 81, 138, 212, 13, ES_AUTOHSCROLL
     EDITTEXT        IDC_EXTRA_FORMATS, 81, 158, 70, 13, ES_AUTOHSCROLL
-    AUTOCHECKBOX    "Hide non-playable formats", IDC_HIDE_NONPLAYABLES, 160, 179, 133, 15, BS_LEFTTEXT | BS_NOTIFY, WS_EX_RIGHT
+    AUTOCHECKBOX    "Hide non-playable files", IDC_HIDE_NONPLAYABLES, 160, 179, 133, 15, BS_LEFTTEXT | BS_NOTIFY, WS_EX_RIGHT
     EDITTEXT        IDC_SERVER_ROOT, 81, 203, 183, 13, ES_AUTOHSCROLL
     PUSHBUTTON      "Open", IDC_SERVER_ROOT_BTN, 267, 203, 34, 12
     AUTOCHECKBOX    "HTTP compression (gzip)", IDC_GZIP_ENABLE, 37, 226, 116, 10, BS_LEFTTEXT, WS_EX_RIGHT
