--- a/trunk/foo_httpcontrol/src/foo_httpcontrol_preferences.rc
+++ b/trunk/foo_httpcontrol/src/foo_httpcontrol_preferences.rc
@@ -26,7 +26,7 @@ FONT 8, "MS Shell Dlg", 400, 0, 1
     CONTROL         "", IDC_CONTROL_IP, WC_IPADDRESS, WS_TABSTOP, 81, 63, 99, 15
     AUTOCHECKBOX    "Credentials", IDC_CONTROL_CREDENTIALS, 37, 84, 51, 8, BS_LEFTTEXT | BS_NOTIFY, WS_EX_RIGHT
     EDITTEXT        IDC_CONTROL_USERNAME, 81, 99, 74, 13, WS_DISABLED | ES_AUTOHSCROLL
-    EDITTEXT        IDC_CONTROL_PASSWORD, 220, 99, 73, 13, WS_DISABLED | ES_AUTOHSCROLL
+    EDITTEXT        IDC_CONTROL_PASSWORD, 220, 99, 73, 13, WS_DISABLED | ES_AUTOHSCROLL | ES_PASSWORD
     EDITTEXT        IDC_CONTROL_PATH, 81, 138, 212, 13, ES_AUTOHSCROLL
     EDITTEXT        IDC_EXTRA_FORMATS, 81, 158, 70, 13, ES_AUTOHSCROLL
     AUTOCHECKBOX    "Hide non-playable files", IDC_HIDE_NONPLAYABLES, 160, 179, 133, 15, BS_LEFTTEXT | BS_NOTIFY, WS_EX_RIGHT
